# GreenMindDB

./: .env.example  .env.production.example  .env.staging.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  DEPLOY.md  LICENSE  Makefile  README.md  add_test_device.py  composedump.yaml  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml  get_token.py  implementation_plan.md  import_all_wav.py  import_small.py  import_wav_to_db.py  nextstep.txt  old_sensor.tsx  run_remote.sh  swagger.json  test_all_species.py  test_e2e.py  test_integration.py  trigger_sms.py  update_sensors_page.py  update_walkthrough.py  update_zones.py
backend/: .dockerignore  Dockerfile  add_device.py  alembic.ini  check_sensors.py  pyproject.toml  pytest.ini  requirements.txt  test_sms.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_greenminddb_v2.py  0002_greenmind_v3.py  0003_ingest_log.py  0004_auth_pairing.py  0005_hypertable.py  0006_form_submissions.py  0007_gateway_sensor_hierarchy.py  0008_universal_zones.py  0009_wav_file_and_mv_migration.py  0010_biosignals.py  (+19 more)
backend/app/: __init__.py  audit.py  auth.py  config.py  database.py  logging_config.py  main.py
backend/scripts/: cleanup_demo_gateways.py  import_wav_data.py  seed_data.py
backend/tests/: conftest.py  test_auth_router.py  test_auth_utils.py  test_boundary_analysis.py  test_config.py  test_contact.py  test_gateway_admin.py  test_gateway_remote.py  test_health.py  test_macmini_stack.py  test_notification_service.py  test_plant_evaluation.py  test_public_observe.py  test_sensor_update.py
db/: init.sql
(+251 files in other folders)
